--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,4 +1,4 @@
-name: Minify
+name: Production
 
 # Controls when the workflow will run
 on:
@@ -12,13 +12,23 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  prod:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-  # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
+
+    - name: Remove File
+      uses: JesseTG/rm@v1.0.0
+      with:
+        path: |
+          .github
+          .gitignore
+          *.md
+
+
+    # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
     - uses: actions/checkout@v2
 
     - name: Auto Minify
