Fix run task indentation

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,14 +18,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-
     # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
     - uses: actions/checkout@v2
 
     - name: Force pull from main
-    - run: |
-      git switch production
-      git reset --hard main
+      run: |
+        git switch production
+        git reset --hard main
 
     - name: Remove File
       uses: JesseTG/rm@v1.0.0
