--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -23,6 +23,7 @@ jobs:
 
     - name: Force pull from main
       run: |
+        git fetch
         git checkout production
         git reset --hard main
 
