--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,19 +21,14 @@ jobs:
     # Checks-out your repository under $GITHUB_WORKSPACE, so auto-minify job can access it
     - uses: actions/checkout@v2
 
-    - name: Force pull from main
+    - name: Force pull from main and delete files
       run: |
         git fetch
         git checkout production
         git reset --hard main
-
-    - name: Remove File
-      uses: JesseTG/rm@v1.0.0
-      with:
-        path: |
-          .github
-          .gitignore
-          *.md
+        rm -r .github
+        rm .gitignore
+        rm *.md
 
     - name: Auto Minify
       uses: nizarmah/auto-minify@v2.1
